--- a/.github/workflows/ci-ubuntu.yml
+++ b/.github/workflows/ci-ubuntu.yml
@@ -12,7 +12,7 @@ on:
 ########################################################################
 
 env:
-  IDRIS2_COMMIT: tags/v0.4.0
+  IDRIS2_COMMIT: ab36ad71cff4cf77fa1e565308abb9e7713cba41
   SCHEME: scheme
 
 jobs:
