--- a/tests/Makefile
+++ b/tests/Makefile
@@ -6,6 +6,6 @@ build:
 	idris2 --build tests.ipkg
 
 run:
-	./build/exec/runtests idris2 $(INTERACTIVE) --failure-file failures
+	./build/exec/runtests idris2 $(INTERACTIVE) --timing --failure-file failures
 
 .PHONY: all build run
